@@ -12,15 +12,72 @@
 	<packaging>war</packaging>
 	<name>yaotrue-learn Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-	<!-- <dependencies>
+	
+	<properties>
+		<!-- 这里统一管理jar的版本 -->
+		<version.jsp-api>2.1</version.jsp-api>
+		<version.jstl>1.2</version.jstl>
+		<version.servlet-api>2.5</version.servlet-api>
+
+		<version.spring>3.1.0.RELEASE</version.spring>
+		<version.tiles>2.2.2</version.tiles>
+	</properties>
+	
+	<dependencies>
+		<!-- <dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>yaotrue-common</artifactId>
+			<version>1.0</version>
+		</dependency> -->
+		
+		<!-- jsp-api -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>${version.jsp-api}</version>
+			<scope>provided</scope>
 		</dependency>
-	</dependencies> -->
+
+		<!-- servlet-api -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>${version.servlet-api}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!--********************** spring************************* -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${version.spring}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${version.spring}</version>
+		</dependency>
+	</dependencies>
 	<build>
 		<finalName>yaotrue-learn</finalName>
+		
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat6-maven-plugin</artifactId>
+				<version>2.0-beta-1</version>
+				<configuration>
+					<!-- http port -->
+					<port>80</port>
+					<path>/</path>
+					<uriEncoding>utf-8</uriEncoding>
+					<ignorePackaging>true</ignorePackaging>
+					<systemProperties>
+						<JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
+					</systemProperties>
+				</configuration>
+			</plugin>
+			
+		</plugins>
 	</build>
 </project>
